# cc-test-smells

./: README.md  TODO.txt  classification-matrix.ods  pom.xml
.github/workflows/: build_java.yaml
Bowling/: pom.xml
Bowling/src/main/java/ch/scs/clean_coders/bowling_kata/: Game.java
Bowling/src/test/java/ch/scs/clean_coders/bowling_kata/: BowlingGameTest.java  BowlingTest.java
C++/: CMakeLists.txt
C++/backing-code/: CMakeLists.txt  flight-dto.cpp  flight-dto.h  flight.h  invalid-request-exception.cpp  invalid-request-exception.h
C++/smelly-tests/: CMakeLists.txt  eager_test.cpp
CSharp/: .gitignore  Directory.Build.props  TestSmells.sln
CSharp/BackingCode/: Class1.cs  Facade.cs  Flight.cs  FlightDto.cs  FlightRepository.cs
CSharp/Tests/: AssertionHelper.cs  EagerTest.cs  FixtureHelper.cs  GeneralFixture.cs  MysteryGuest.cs  Tests.csproj
CSharp/Tests-in-NUnit/: EagerTest.cs  Tests-in-NUnit.csproj  UnitTest1.cs
csharp-dotnet-bowling/: README.md  csharp-dotnet-bowling.sln
csharp-dotnet-bowling/src/Bowling/: BowlingGame.cs
csharp-dotnet-bowling/src/BowlingTest/: BowlingTest.cs  BowlingTest.csproj
java-maven-bowling/: README.md  pom.xml
java-maven-bowling/src/main/java/ch/scs/clean_coders/bowling_kata/: BowlingGame.java
src/main/java/ch/scs/cc/testing/smells/: Facade.java  Flight.java  FlightDto.java  FlightRepository.java  InvalidRequestException.java
src/test/java/ch/scs/cc/testing/helpers/: AssertionHelper.java  FixtureHelper.java
src/test/java/ch/scs/cc/testing/smells/: EagerTest.java  SomeTest.java  (+2 more)
src/test/resources/: test-flights.csv
(+10 files in other folders)
